优化网站设计：更新烘焙坊图片、美化联系我们部分并添加互动效果

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="about-image-container">
-                        <img src="img/bakery.svg" alt="我们的烘焙坊" data-placeholder="我们的烘焙坊" data-color="#748c70" onerror="this.style.display='none'; this.parentNode.classList.add('placeholder-active');">
+                        <img src="img/bakery.jpg" alt="我们的烘焙坊" data-placeholder="我们的烘焙坊" data-color="#748c70">
                         <div class="about-image-placeholder">
                             <span class="placeholder-text">我们的烘焙坊</span>
                         </div>
@@ -209,5 +209,6 @@
     <script src="js/translations.js?v=4"></script>
     <script src="js/script.js?v=9"></script>
     <script src="js/language-switcher.js?v=4"></script>
+    <script src="js/interactive.js"></script>
 </body>
 </html> 
