更新：将文本从'我们的烘焙坊'更改为'乔乐烘焙屋'

--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="about-image-container">
-                        <img src="img/bakery.jpg" alt="我们的烘焙坊" data-placeholder="我们的烘焙坊" data-color="#748c70">
+                        <img src="img/bakery.jpg" alt="乔乐烘焙屋" data-placeholder="乔乐烘焙屋" data-color="#748c70">
                         <div class="about-image-placeholder">
-                            <span class="placeholder-text">我们的烘焙坊</span>
+                            <span class="placeholder-text">乔乐烘焙屋</span>
                         </div>
                     </div>
                 </div>
                 <div class="about-text">
                     <p>乔乐成立于2025年，我们专注于提供最高品质的纯手工制作曲奇饼干。</p>
-                    <p>欢迎来到乔乐烘培屋，我们的曲奇饼都是采用纯天然奶油，筛选高品质以及纯天然是的材料，让你和家人朋友们都可以吃的健康安心</p>
+                    <p>欢迎来到乔乐烘焙屋，我们的曲奇饼都是采用纯天然奶油，筛选高品质以及纯天然是的材料，让你和家人朋友们都可以吃的健康安心</p>
                     <p>我们的初心就是让顾客们吃的每一口都充满幸福快乐</p>
                     <p>我们的订单都是预购的。我们收到订单才会现做现卖，保证新鲜品质且完美送达到顾客手中</p>
                 </div>
