美化：为'关于我们'部分添加富士风格设计和丰富内容

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
                     </div>
                 </div>
                 <div class="about-text">
-                    <p>乔乐成立于2025年，我们专注于提供最高品质的纯手工制作曲奇饼干。</p>
-                    <p>欢迎来到乔乐烘焙屋，我们的曲奇饼都是采用纯天然奶油，筛选高品质以及纯天然是的材料，让你和家人朋友们都可以吃的健康安心</p>
-                    <p>我们的初心就是让顾客们吃的每一口都充满幸福快乐</p>
-                    <p>我们的订单都是预购的。我们收到订单才会现做现卖，保证新鲜品质且完美送达到顾客手中</p>
+                    <p><span class="about-text-highlight">乔乐烘焙屋</span>成立于2025年，源于对传统烘焙艺术的热爱与追求。我们专注于提供最高品质的纯手工制作曲奇饼干，每一块饼干都融入了我们对美食的热情。</p>
+                    <p>在<span class="about-text-highlight">乔乐烘焙屋</span>，我们坚持使用<span class="about-text-highlight">纯天然奶油</span>和精心筛选的<span class="about-text-highlight">高品质原料</span>。我们相信，只有最好的原料才能制作出最美味的曲奇，让您和家人朋友们都能吃得健康安心。</p>
+                    <p>我们的理念是将<span class="about-text-highlight">传统烘焙技艺</span>与现代口味完美融合。每一款曲奇都经过精心设计和测试，确保口感和风味的完美平衡。我们的初心就是让顾客们吃的每一口都充满幸福快乐。</p>
+                    <p>乔乐始终坚持<span class="about-text-highlight">小批量生产</span>的方式，保证每一批次的产品都能得到细致的关注。我们的订单都是预购的，收到订单才会现做现卖，保证新鲜品质且完美送达到顾客手中。感谢您选择乔乐，让我们一起享受这份甜蜜的生活。</p>
                 </div>
             </div>
         </div>
