移除语言切换功能并将网站统一为英文

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>乔乐 - 手工制作的优质曲奇饼干</title>
+    <title>Jore Bake - Handmade Premium Cookies</title>
     <link rel="icon" href="img/favicon.svg?v=4" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css?v=9">
@@ -15,15 +15,15 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>乔乐</h1>
-                <p>手工制作的优质曲奇饼干</p>
+                <h1>Jore Bake</h1>
+                <p>Handmade Premium Cookies</p>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#hero">首页</a></li>
-                    <li><a href="#products">产品</a></li>
-                    <li><a href="#about">关于我们</a></li>
-                    <li><a href="#contact">联系我们</a></li>
+                    <li><a href="#hero">Home</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,92 +31,92 @@
 
     <section id="hero">
         <div class="container">
-            <h2>乔乐手工曲奇</h2>
-            <p>每一块曲奇都经过精心烘焙，使用最优质的原料</p>
-            <a href="#products" class="btn">查看产品</a>
+            <h2>Jore Bake Handmade Cookies</h2>
+            <p>Every cookie is carefully baked with premium ingredients</p>
+            <a href="#products" class="btn">View Products</a>
         </div>
     </section>
 
     <section id="products">
         <div class="container">
-            <h2>我们的产品</h2>
+            <h2>Our Products</h2>
             <div class="payment-badges">
                 <span class="badge tng-badge">
                     <img src="img/tng-ewallet.svg" alt="TNG eWallet" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\' width=\'80\' height=\'40\'><rect width=\'80\' height=\'40\' fill=\'%23FF6600\'/><text x=\'40\' y=\'25\' font-family=\'Arial\' font-size=\'12\' text-anchor=\'middle\' fill=\'white\'>TNG eWallet</text></svg>';">
-                    <span>支持Touch 'n Go eWallet支付</span>
+                    <span>Touch 'n Go eWallet Accepted</span>
                 </span>
             </div>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="img/cookie.jpeg" alt="原味曲奇">
-                    <h3 data-translate="product1_title">原味曲奇</h3>
-                    <p data-translate="product1_desc">经典原味，香脆可口</p>
-                    <div class="price">RM25 / 盒</div>
-                    <button class="add-to-cart" data-product-id="1" data-product-name="原味曲奇" data-product-price="25">
-                        <span class="cart-icon"></span>加入购物车
+                    <img src="img/cookie.jpeg" alt="Original Cookies">
+                    <h3>Original Cookies</h3>
+                    <p>Classic flavor, crispy and delicious</p>
+                    <div class="price">RM25 / box</div>
+                    <button class="add-to-cart" data-product-id="1" data-product-name="Original Cookies" data-product-price="25">
+                        <span class="cart-icon"></span>Add to Cart
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="img/cookie.jpeg" alt="巧克力曲奇">
-                    <h3 data-translate="product2_title">巧克力曲奇</h3>
-                    <p data-translate="product2_desc">浓郁的巧克力口味，松软可口</p>
-                    <div class="price">RM25 / 盒</div>
-                    <button class="add-to-cart" data-product-id="2" data-product-name="巧克力曲奇" data-product-price="25">
-                        <span class="cart-icon"></span>加入购物车
+                    <img src="img/cookie.jpeg" alt="Chocolate Cookies">
+                    <h3>Chocolate Cookies</h3>
+                    <p>Rich chocolate flavor, soft and tasty</p>
+                    <div class="price">RM25 / box</div>
+                    <button class="add-to-cart" data-product-id="2" data-product-name="Chocolate Cookies" data-product-price="25">
+                        <span class="cart-icon"></span>Add to Cart
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="img/cookie.jpeg" alt="抹茶曲奇">
-                    <h3 data-translate="product3_title">抹茶曲奇</h3>
-                    <p data-translate="product3_desc">清新抹茶风味，回味无穷</p>
-                    <div class="price">RM25 / 盒</div>
-                    <button class="add-to-cart" data-product-id="3" data-product-name="抹茶曲奇" data-product-price="25">
-                        <span class="cart-icon"></span>加入购物车
+                    <img src="img/cookie.jpeg" alt="Matcha Cookies">
+                    <h3>Matcha Cookies</h3>
+                    <p>Fresh matcha flavor, lingering taste</p>
+                    <div class="price">RM25 / box</div>
+                    <button class="add-to-cart" data-product-id="3" data-product-name="Matcha Cookies" data-product-price="25">
+                        <span class="cart-icon"></span>Add to Cart
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="img/cookie.jpeg" alt="茉莉柠檬曲奇">
-                    <h3 data-translate="product4_title">茉莉柠檬曲奇</h3>
-                    <p data-translate="product4_desc">茉莉花香与柠檬的完美结合</p>
-                    <div class="price">RM25 / 盒</div>
-                    <button class="add-to-cart" data-product-id="4" data-product-name="茉莉柠檬曲奇" data-product-price="25">
-                        <span class="cart-icon"></span>加入购物车
+                    <img src="img/cookie.jpeg" alt="Jasmine Lemon Cookies">
+                    <h3>Jasmine Lemon Cookies</h3>
+                    <p>Perfect blend of jasmine fragrance and lemon</p>
+                    <div class="price">RM25 / box</div>
+                    <button class="add-to-cart" data-product-id="4" data-product-name="Jasmine Lemon Cookies" data-product-price="25">
+                        <span class="cart-icon"></span>Add to Cart
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="img/cookie.jpeg" alt="奥利奥曲奇">
-                    <h3 data-translate="product5_title">奥利奥曲奇</h3>
-                    <p data-translate="product5_desc">经典奥利奥风味，浓郁香甜</p>
-                    <div class="price">RM25 / 盒</div>
-                    <button class="add-to-cart" data-product-id="5" data-product-name="奥利奥曲奇" data-product-price="25">
-                        <span class="cart-icon"></span>加入购物车
+                    <img src="img/cookie.jpeg" alt="Oreo Cookies">
+                    <h3>Oreo Cookies</h3>
+                    <p>Classic Oreo flavor, rich and sweet</p>
+                    <div class="price">RM25 / box</div>
+                    <button class="add-to-cart" data-product-id="5" data-product-name="Oreo Cookies" data-product-price="25">
+                        <span class="cart-icon"></span>Add to Cart
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="img/cookie.jpeg" alt="咖啡曲奇">
-                    <h3 data-translate="product6_title">咖啡曲奇</h3>
-                    <p data-translate="product6_desc">醇厚咖啡香气，提神醒脑</p>
-                    <div class="price">RM25 / 盒</div>
-                    <button class="add-to-cart" data-product-id="6" data-product-name="咖啡曲奇" data-product-price="25">
-                        <span class="cart-icon"></span>加入购物车
+                    <img src="img/cookie.jpeg" alt="Coffee Cookies">
+                    <h3>Coffee Cookies</h3>
+                    <p>Rich coffee aroma, refreshing and energizing</p>
+                    <div class="price">RM25 / box</div>
+                    <button class="add-to-cart" data-product-id="6" data-product-name="Coffee Cookies" data-product-price="25">
+                        <span class="cart-icon"></span>Add to Cart
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="img/cookie.jpeg" alt="威芝士曲奇">
-                    <h3 data-translate="product7_title">威芝士曲奇</h3>
-                    <p data-translate="product7_desc">浓郁芝士风味，咸香可口</p>
-                    <div class="price">RM25 / 盒</div>
-                    <button class="add-to-cart" data-product-id="7" data-product-name="威芝士曲奇" data-product-price="25">
-                        <span class="cart-icon"></span>加入购物车
+                    <img src="img/cookie.jpeg" alt="Cheese Cookies">
+                    <h3>Cheese Cookies</h3>
+                    <p>Rich cheese flavor, savory and delicious</p>
+                    <div class="price">RM25 / box</div>
+                    <button class="add-to-cart" data-product-id="7" data-product-name="Cheese Cookies" data-product-price="25">
+                        <span class="cart-icon"></span>Add to Cart
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="img/cookie.jpeg" alt="伯爵红茶曲奇">
-                    <h3 data-translate="product8_title">伯爵红茶曲奇</h3>
-                    <p data-translate="product8_desc">伯爵红茶香气，优雅醇厚</p>
-                    <div class="price">RM25 / 盒</div>
-                    <button class="add-to-cart" data-product-id="8" data-product-name="伯爵红茶曲奇" data-product-price="25">
-                        <span class="cart-icon"></span>加入购物车
+                    <img src="img/cookie.jpeg" alt="Earl Grey Cookies">
+                    <h3>Earl Grey Cookies</h3>
+                    <p>Earl Grey tea fragrance, elegant and rich</p>
+                    <div class="price">RM25 / box</div>
+                    <button class="add-to-cart" data-product-id="8" data-product-name="Earl Grey Cookies" data-product-price="25">
+                        <span class="cart-icon"></span>Add to Cart
                     </button>
                 </div>
             </div>
@@ -125,21 +125,21 @@
 
     <section id="about">
         <div class="container">
-            <h2>关于我们</h2>
+            <h2>About Us</h2>
             <div class="about-content">
                 <div class="about-image">
                     <div class="about-image-container">
-                        <img src="img/bakery.jpg" alt="乔乐烘焙屋" data-placeholder="乔乐烘焙屋" data-color="#748c70">
+                        <img src="img/bakery.jpg" alt="Jore Bake House" data-placeholder="Jore Bake House" data-color="#748c70">
                         <div class="about-image-placeholder">
-                            <span class="placeholder-text">乔乐烘焙屋</span>
+                            <span class="placeholder-text">Jore Bake House</span>
                         </div>
                     </div>
                 </div>
                 <div class="about-text">
-                    <p><span class="about-text-highlight">乔乐烘焙屋</span>成立于2025年，源于对传统烘焙艺术的热爱与追求。我们专注于提供最高品质的纯手工制作曲奇饼干，每一块饼干都融入了我们对美食的热情。</p>
-                    <p>在<span class="about-text-highlight">乔乐烘焙屋</span>，我们坚持使用<span class="about-text-highlight">纯天然奶油</span>和精心筛选的<span class="about-text-highlight">高品质原料</span>。我们相信，只有最好的原料才能制作出最美味的曲奇，让您和家人朋友们都能吃得健康安心。</p>
-                    <p>我们的理念是将<span class="about-text-highlight">传统烘焙技艺</span>与现代口味完美融合。每一款曲奇都经过精心设计和测试，确保口感和风味的完美平衡。我们的初心就是让顾客们吃的每一口都充满幸福快乐。</p>
-                    <p>乔乐始终坚持<span class="about-text-highlight">小批量生产</span>的方式，保证每一批次的产品都能得到细致的关注。我们的订单都是预购的，收到订单才会现做现卖，保证新鲜品质且完美送达到顾客手中。感谢您选择乔乐，让我们一起享受这份甜蜜的生活。</p>
+                    <p>Jore Bake was established in 2025, focusing on providing the highest quality handmade cookies.</p>
+                    <p>Welcome to Jore Bake House, where our cookies are made with pure natural butter and carefully selected high-quality natural ingredients, ensuring you and your family can enjoy them healthily and with peace of mind.</p>
+                    <p>Our core mission is to ensure that every bite our customers take is filled with happiness and joy.</p>
+                    <p>All our orders are made to order. We start baking only after receiving your order, guaranteeing freshness and perfect delivery to our customers.</p>
                 </div>
             </div>
         </div>
@@ -147,31 +147,31 @@
 
     <section id="contact">
         <div class="container">
-            <h2>联系我们</h2>
+            <h2>Contact Us</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>联系方式</h3>
-                    <p><strong>地址：</strong>jalan</p>
-                    <p><strong>电话：</strong>021-XXXXXXXX</p>
-                    <p><strong>邮箱：</strong>info@deliciouscookies.com</p>
-                    <p><strong>营业时间：</strong>周一至周日 9:00-20:00</p>
+                    <h3>Contact Information</h3>
+                    <p><strong>Address:</strong> Jalan</p>
+                    <p><strong>Phone:</strong> 021-XXXXXXXX</p>
+                    <p><strong>Email:</strong> info@deliciouscookies.com</p>
+                    <p><strong>Business Hours:</strong> Monday to Sunday, 9:00-20:00</p>
                 </div>
                 <div class="contact-form">
-                    <h3>给我们留言</h3>
+                    <h3>Send Us a Message</h3>
                     <form>
                         <div class="form-group">
-                            <label for="name">姓名</label>
+                            <label for="name">Name</label>
                             <input type="text" id="name" name="name" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">邮箱</label>
+                            <label for="email">Email</label>
                             <input type="email" id="email" name="email" required>
                         </div>
                         <div class="form-group">
-                            <label for="message">留言</label>
+                            <label for="message">Message</label>
                             <textarea id="message" name="message" rows="5" required></textarea>
                         </div>
-                        <button type="submit" class="btn">发送</button>
+                        <button type="submit" class="btn">Send</button>
                     </form>
                 </div>
             </div>
@@ -182,11 +182,11 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>乔乐</h3>
-                    <p>手工制作的优质曲奇饼干</p>
+                    <h3>Jore Bake</h3>
+                    <p>Handmade Premium Cookies</p>
                 </div>
                 <div class="footer-column">
-                    <h3>支付方式</h3>
+                    <h3>Payment Methods</h3>
                     <div class="payment-methods">
                         <div class="payment-method">
                             <img src="img/tng-ewallet.svg" alt="TNG eWallet" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\' width=\'60\' height=\'30\'><rect width=\'60\' height=\'30\' fill=\'%23FF6600\'/><text x=\'30\' y=\'20\' font-family=\'Arial\' font-size=\'8\' text-anchor=\'middle\' fill=\'white\'>TNG eWallet</text></svg>';">
@@ -197,18 +197,16 @@
                     </div>
                 </div>
                 <div class="footer-column">
-                    <h3>联系我们</h3>
-                    <p>电话: 021-XXXXXXXX</p>
-                    <p>邮箱: info@deliciouscookies.com</p>
+                    <h3>Contact Us</h3>
+                    <p>Phone: 021-XXXXXXXX</p>
+                    <p>Email: info@deliciouscookies.com</p>
                 </div>
             </div>
-            <p class="copyright">&copy; 2025 乔乐 版权所有</p>
+            <p class="copyright">&copy; 2025 Jore Bake. All Rights Reserved</p>
         </div>
     </footer>
 
-    <script src="js/translations.js?v=4"></script>
     <script src="js/script.js?v=9"></script>
-    <script src="js/language-switcher.js?v=4"></script>
     <script src="js/interactive.js"></script>
 </body>
 </html> 
